--- a/MyLibrary/src/ui/jfPurchase/JFPurchase.form
+++ b/MyLibrary/src/ui/jfPurchase/JFPurchase.form
@@ -467,7 +467,7 @@
                                               </Group>
                                           </Group>
                                           <EmptySpace max="32767" attributes="0"/>
-                                          <Component id="jPanel18" min="-2" pref="105" max="-2" attributes="0"/>
+                                          <Component id="panelBtnDeleteOrderLine" min="-2" pref="118" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
@@ -515,7 +515,7 @@
                                   </Group>
                               </Group>
                               <Component id="jPanel16" min="-2" pref="35" max="-2" attributes="0"/>
-                              <Component id="jPanel18" min="-2" pref="35" max="-2" attributes="0"/>
+                              <Component id="panelBtnDeleteOrderLine" min="-2" pref="35" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -539,11 +539,13 @@
                     <Component class="javax.swing.JTable" name="tableOrderLine">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="7" rowCount="10">
+                          <Table columnCount="9" rowCount="10">
                             <Column editable="false" title="ISBN" type="java.lang.Object"/>
                             <Column editable="false" title="Titre" type="java.lang.String"/>
+                            <Column editable="false" title="Stock" type="java.lang.Integer"/>
                             <Column editable="true" title="Quantit&#xe9;" type="java.lang.Integer"/>
                             <Column editable="false" title="Prix unitaire HT" type="java.lang.Float"/>
+                            <Column editable="false" title="Remise" type="java.lang.Float"/>
                             <Column editable="false" title="T.V.A" type="java.lang.Float"/>
                             <Column editable="false" title="Prix H.T" type="java.lang.Float"/>
                             <Column editable="false" title="Prix T.T.C" type="java.lang.Float"/>
@@ -747,7 +749,7 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Container class="javax.swing.JPanel" name="jPanel18">
+                <Container class="javax.swing.JPanel" name="panelBtnDeleteOrderLine">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="66" red="33" type="rgb"/>
@@ -760,7 +762,7 @@
                   <Layout>
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="btnDeleteOrderLine" alignment="1" pref="105" max="32767" attributes="0"/>
+                          <Component id="btnDeleteOrderLine" alignment="1" pref="118" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                     <DimensionLayout dim="1">
@@ -776,11 +778,14 @@
                           <Color blue="ff" green="ff" red="ff" type="rgb"/>
                         </Property>
                         <Property name="horizontalAlignment" type="int" value="0"/>
-                        <Property name="text" type="java.lang.String" value="Retirer une ligne"/>
+                        <Property name="text" type="java.lang.String" value="Supprimer la ligne"/>
                         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                           <Color id="Curseur en forme de main"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnDeleteOrderLineMouseReleased"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
@@ -1998,6 +2003,33 @@
                             <Column editable="false" title="ISBN" type="java.lang.String"/>
                             <Column editable="false" title="Auteur" type="java.lang.String"/>
                           </Table>
+                        </Property>
+                        <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+                          <TableColumnModel selectionModel="0">
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
+                          </TableColumnModel>
+                        </Property>
+                        <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
+                          <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                         </Property>
                       </Properties>
                     </Component>
