--- a/MyLibrary/src/ui/JFBook2.form
+++ b/MyLibrary/src/ui/JFBook2.form
@@ -103,7 +103,7 @@
                                   <Component id="jComboBoxAuthor2" min="-2" pref="203" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace pref="53" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jButtonAddPicture" alignment="1" min="-2" pref="187" max="-2" attributes="0"/>
                               <Group type="102" alignment="1" attributes="0">
@@ -683,10 +683,10 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="tfSearch" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jPanel9" alignment="0" pref="166" max="32767" attributes="0"/>
+                          <Component id="jPanel9" alignment="0" pref="176" max="32767" attributes="0"/>
                           <Component id="jComboBoxSearch" alignment="0" pref="176" max="32767" attributes="0"/>
                           <Component id="jSeparator1" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jPanel3" alignment="0" pref="166" max="32767" attributes="0"/>
+                          <Component id="jPanel3" alignment="0" pref="176" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
