--- a/MyLibrary/src/Home/Header.form
+++ b/MyLibrary/src/Home/Header.form
@@ -55,7 +55,7 @@
                       <Component id="jlLoggedEmpLastName" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="JLPendingReviews" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="55" max="32767" attributes="0"/>
+                          <EmptySpace pref="45" max="32767" attributes="0"/>
                           <Component id="jlLoggedEmpFirstName" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -139,9 +139,9 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="66" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="7 pending reviews"/>
+            <Property name="text" type="java.lang.String" value="Fail to retrieve infos"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Curseur en forme de main"/>
+              <Color id="Curseur par d&#xe9;faut"/>
             </Property>
           </Properties>
           <Events>
